@@ -1,3 +1,10 @@
+2022-01-15  Karl Berry  <karl@freefriends.org>
+
+	* web2c/Makefile.am (web2c_LDADD): set to libweb2c.a
+	instead of -L. -lweb2c, for compatibility with slibtool,
+	and clarity. Report from Michael Orlitzky,
+	tex-k 15 Jan 2022 13:28:41.
+
 2022-01-15  Andreas Scherer  <https://ascherer.github.io>
 
 	* tangle.ch,
